--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,7 +31,9 @@
       "never"
     ],
     "react/jsx-uses-react": "error",
-    "react/jsx-uses-vars": "error"
+    "react/jsx-uses-vars": "error",
+    "no-console": "off",
+    "no-extra-boolean-cast": "off"
   },
   "plugins": [
     "react"
